feat: landing page

--- a/static/content/es.yml
+++ b/static/content/es.yml
@@ -1,1 +1,18 @@
-title: 'Titulo en español'
+title: "Hola,\nI am Baptiste Dauphouy,\na full-stack developer."
+projects:
+  - title: 'Shopiette'
+    handle: 'shopiette'
+    description: 'Quickly build e-commerce sites with Svelte.'
+    badgeText: 'Work in progress'
+    githubUrl: 'https://github.com/bdauphouy/shopiette'
+    siteUrl: 'https://shopiette.bdau.fr'
+  - title: 'Vintify'
+    handle: 'vintify'
+    description: 'Easily import your Vinted products to Shopify.'
+    githubUrl: 'https://github.com/bdauphouy/vintify'
+    siteUrl: 'https://vintify.bdau.fr'
+  - title: 'Vitaliplay'
+    handle: 'vitaliplay'
+    description: 'Vitaliplay is a sports platform for seniors.'
+    githubUrl: 'https://github.com/bdauphouy/vitaliplay'
+    siteUrl: 'https://vitaliplay.fr'
