feat: lang selector

--- a/static/content/en.yml
+++ b/static/content/en.yml
@@ -1,4 +1,4 @@
-title: "Hola,\nI am Baptiste Dauphouy,\na full-stack developer."
+title: "Hello,\nI am Baptiste Dauphouy,\na full-stack developer."
 projects:
   - title: 'Shopiette'
     handle: 'shopiette'
