--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
-		"@types/node": "22.5.0",
 		"autoprefixer": "10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -33,8 +32,5 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"yaml": "2.5.0"
-	}
+	"type": "module"
 }
