--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-static": "3.0.4",
+		"@sveltejs/adapter-vercel": "5.4.3",
 		"gsap": "3.12.5"
 	}
 }
