--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "3.0.4",
 		"@sveltejs/adapter-vercel": "5.4.3",
+		"@vercel/analytics": "1.3.1",
 		"gsap": "3.12.5"
 	}
 }
