--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@sveltejs/adapter-static": "3.0.4",
 		"@sveltejs/adapter-vercel": "5.4.3",
 		"@vercel/analytics": "1.3.1",
-		"gsap": "3.12.5"
+		"gsap": "3.12.5",
+		"lenis": "1.1.13"
 	}
 }
